--- a/www-src/app/styles/search.less
+++ b/www-src/app/styles/search.less
@@ -61,7 +61,23 @@
 
 }
 
-.tweets {
+.dp-tweets, .tweets { // .tweets is adblocked
+	.title {
+		font-weight: 600;
+		padding: 8px 15px;
+		margin-left: -15px;
+		margin-right: -15px;
+		margin-bottom: 12px;
+		background-color: #A0B6CB;
+		color: #ffffff;
+		-webkit-border-bottom-right-radius: 4px;
+		-webkit-border-bottom-left-radius: 4px;
+		-moz-border-radius-bottomright: 4px;
+		-moz-border-radius-bottomleft: 4px;
+		border-bottom-right-radius: 4px;
+		border-bottom-left-radius: 4px;
+	}
+
 	.twitter-blue {
 		color: #55ACEE;
 
