Added EC, EU & CACTOS logos. Removed FP7 logo.

--- a/www-src/app/views/footer.html
+++ b/www-src/app/views/footer.html
@@ -1,3 +1,3 @@
 <div class="container">
-	<p class="text-muted text-center"><small>DataPlay is Funded by the EU for framework 7 programme, utilises CELAR Cloud Technology. Copyright &copy; 2014 <a href="http://playgen.com/">PlayGen</a>. All Rights Reserved</small></p>
+	<p class="text-muted text-center"><small>DataPlay is Funded by the EU for framework 7 programme. Copyright &copy; 2013 <a href="http://playgen.com/">PlayGen</a>. All Rights Reserved</small></p>
 </div>
