--- a/www-src/app/views/landing.html
+++ b/www-src/app/views/landing.html
@@ -83,7 +83,12 @@
 
 	<div class="row" id="affiliates">
 		<div class="col-xs-12">
-			<img src="images/affiliates.png" />
+			<div class="row">
+				<div class="col-xs-3 col-sm-2 col-sm-offset-2"><a href="http://europa.eu/index_en.htm" target="_blank" title="European Union"><img src="images/logos/eu.png" width="140px" /></a></div>
+				<div class="col-xs-3 col-sm-2"><a href="http://ec.europa.eu/index_en.htm" target="_blank" title="European Commission"><img src="images/logos/ec.png" width="140px" /></a></div>
+				<div class="col-xs-3 col-sm-2"><a href="http://www.celarcloud.eu/" target="_blank" title="CELAR"><img src="images/logos/celar.png" width="140px" /></a></div>
+				<div class="col-xs-3 col-sm-2"><a href="http://www.cactosfp7.eu/" target="_blank" title="CACTOS"><img src="images/logos/cactos.png" width="140px" /></a></div>
+			</div>
 		</div>
 	</div>
 </div>
